--- a/style.css
+++ b/style.css
@@ -46,15 +46,28 @@
   background-color: rgb(150, 81, 214);
 }
 
-/* .section-container {
+.section-container {
   margin: auto;
-  width: 1100px;
+  width: 800px;
   height: 400px;
-} */
+}
 
-/* .section-white {
-    background-color: white;
-{ */
+.section-white {
+  background-color: white;
+}
+.left {
+  width: 30%;
+  height: 100%;
+  background-color: blueviolet;
+  display: inline-block;
+}
+
+.right {
+  width: 20%;
+  height: 100%;
+  background-color: blueviolet;
+  display: inline-block;
+}
 
 #side-footer {
   background-color: rgb(65, 54, 54);
